--- a/src/examples/area-spline.html
+++ b/src/examples/area-spline.html
@@ -17,29 +17,27 @@
                 format: "%s",
                 data: ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
             },
-            series: {
-                items: [{
-                    name: "John",
-                    data: [3, 4, 3, 5, 4, 10, 12]
-                }, {
-                    name: "Jane",
-                    data: [1, 3, 4, 3, 3, 5, 4]
-                }]
-            }
+            series: [{
+                name: "John",
+                data: [3, 4, 3, 5, 4, 10, 12]
+            }, {
+                name: "Jane",
+                data: [1, 3, 4, 3, 3, 5, 4]
+            }]
         };
 
         var options = {
             plotArea: {
-                padding: 20
-            },
-            linechart: {
                 area: {
                     visible: true
                 },
-                interpolation: "cardinal",
+                line: {
+                    interpolation: "cardinal"
+                },
                 markers: {
                     visible: true
-                }
+                },
+                padding: 20
             },
             legend: {
                 title: "Who?",
