--- a/src/examples/area-stacked-percent.html
+++ b/src/examples/area-stacked-percent.html
@@ -13,95 +13,91 @@
     <div id="chart" />
     <script>
         var data = {
-            "categories": {
-                "format": "%s",
-                "data": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
+            categories: {
+                format: "%s",
+                data: ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
             },
-            "series": {
-                "items": [{
-                    "name": "Oceania",
-                    "data": [2, 2, 2, 6, 13, 30, 46]
-                    },
-                    {
-                        "name": "Asia",
-                        "data": [502, 635, 809, 947, 1402, 3634, 5268]
-                    },
-                    {
-                        "name": "Africa",
-                        "data": [106, 107, 111, 133, 221, 767, 1766]
-                    },
-                    {
-                        "name": "Europe",
-                        "data": [163, 203, 276, 408, 547, 729, 628],
-                        "marker": "diamond"
-                    },
-                    {
-                        "name": "America",
-                        "data": [18, 31, 54, 156, 339, 818, 1201]
-                    }]
-            }
+            series: [{
+                name: "Oceania",
+                data: [2, 2, 2, 6, 13, 30, 46]
+            }, {
+                name: "Asia",
+                data: [502, 635, 809, 947, 1402, 3634, 5268]
+            }, {
+                name: "Africa",
+                data: [106, 107, 111, 133, 221, 767, 1766]
+            }, {
+                name: "Europe",
+                data: [163, 203, 276, 408, 547, 729, 628],
+                marker: "diamond"
+            }, {
+                name: "America",
+                data: [18, 31, 54, 156, 339, 818, 1201]
+            }]
         };
 
         var options = {
-            "plotArea": {
-                "padding": 20,
-                "innerPadding": 1,
-                "outerPadding": 0
-            },
-            "linechart": {
-                "area": {
-                    "visible": true
+            plotArea: {
+                area: {
+                    visible: true
                 },
-                "interpolation": "basic",
-                "markers": {
-                    "visible": true,
-                    "type": "circle",
-                    "size": 6
+                bands: {
+                    innerPadding: 1,
+                    outerPadding: 0
+                },
+                line: {
+                    interpolation: "linear"
+                },
+                markers: {
+                    visible: true,
+                    type: "circle",
+                    size: 6
+                },
+                padding: 20
+            },
+            legend: {
+                title: "Continent",
+                position: "right",
+                width: 200
+            },
+            title: {
+                text: "Area Chart - 100% Stacked",
+                align: "center",
+                height: 50
+            },
+            xAxis: {
+                gridlines: "none",
+                labels: {
+                    rotate: 0
+                },
+                tickmarks: false,
+                title: {
+                    text: "Year"
                 }
             },
-            "legend": {
-                "title": "Continent",
-                "position": "right",
-                "width": 200
-            },
-            "title": {
-                "text": "Area Chart - 100% Stacked",
-                "align": "center",
-                "height": 50
-            },
-            "xAxis": {
-                "gridlines": "none",
-                "labels": {
-                    "rotate": 0
+            yAxis: [{
+                gridlines: "none",
+                labels: {
+                    format: "%"
                 },
-                "tickmarks": false,
-                "title": {
-                    "text": "Year"
-                }
-            },
-            "yAxis": [{
-                "gridlines": "none",
-                "labels": {
-                    "format": "%"
-                },
-                "tickmarks": true,
-                "title": {
-                    "text": "Percent"
+                tickmarks: true,
+                title: {
+                    text: "Percent"
                 }
             }, {
-                "gridlines": "none",
-                "labels": {
-                    "format": "%"
+                gridlines: "none",
+                labels: {
+                    format: "%"
                 },
-                "orient": "right",
-                "tickmarks": true,
-                "title": {
-                    "text": "Percent"
+                orient: "right",
+                tickmarks: true,
+                title: {
+                    text: "Percent"
                 }
             }],
-            "tooltip": {
-                "title": "Population",
-                "valueSuffix": " people"
+            tooltip: {
+                title: "Population",
+                valueSuffix: " people"
             }
         };
 
