--- a/src/examples/area-stepbefore.html
+++ b/src/examples/area-stepbefore.html
@@ -13,65 +13,62 @@
     <div id="chart" />
     <script>
         var data = {
-            "categories": {
-                "format": "%s",
-                "data": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
+            categories: {
+                format: "%s",
+                data: ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
             },
-            "series": {
-                "animate": true,
-                "items": [{
-                    "name": "John",
-                    "data": [3, 4, 3, 5, 4, 10, 12]
-                }, {
-                    "name": "Jane",
-                    "data": [1, 3, 4, 3, 3, 5, 4]
-                }]
-            }
+            series: [{
+                name: "John",
+                data: [3, 4, 3, 5, 4, 10, 12]
+            }, {
+                name: "Jane",
+                data: [1, 3, 4, 3, 3, 5, 4]
+            }]
         };
 
 		var options = {
-            "plotArea": {
-                "padding": 20
-            },
-            "linechart": {
-                "area": {
-                    "visible": true
+            plotArea: {
+                area: {
+                    visible: true
                 },
-                "interpolation": "step-before",
-                "markers": {
-                    "visible": true
-                }
-            },
-            "legend": {
-                "title": "Who?",
-                "position": "right",
-                "width": 200
-            },
-            "title": {
-                "text": "Area Chart - Step Before",
-                "align": "center",
-                "height": 50
-            },
-            "xAxis": [{
-                "gridlines": "none",
-                "labels": {
-                    "rotate": 0
+                line: {
+                    interpolation: "step-before"
                 },
-                "tickmarks": false,
-                "title": {
-                    "text": "Day"
+                markers: {
+                    visible: true
+                },
+                padding: 20
+            },
+            legend: {
+                title: "Who?",
+                position: "right",
+                width: 200
+            },
+            title: {
+                text: "Area Chart - Step Before",
+                align: "center",
+                height: 50
+            },
+            xAxis: [{
+                gridlines: "none",
+                labels: {
+                    rotate: 0
+                },
+                tickmarks: false,
+                title: {
+                    text: "Day"
                 }
             }],
-            "yAxis": [{
-                "gridlines": "none",
-                "tickmarks": true,
-                "title": {
-                    "text": "Fruit Units"
+            yAxis: [{
+                gridlines: "none",
+                tickmarks: true,
+                title: {
+                    text: "Fruit Units"
                 }
             }],
-            "tooltip": {
-                "title": "Fruit Units",
-                "valueSuffix": " fruits"
+            tooltip: {
+                title: "Fruit Units",
+                valueSuffix: " fruits"
             }
         };
 
