--- a/src/examples/bar-labels.html
+++ b/src/examples/bar-labels.html
@@ -17,18 +17,16 @@
                 format: "%s",
                 data: ["Africa", "America", "Asia", "Europe", "Oceania"]
             },
-            series: {
-                items: [{
-                    name: "Year 1800",
-                    data: [107, 31, 635, 203, 2]
-                }, {
-                    name: "Year 1900",
-                    data: [133, 156, 947, 408, 6]
-                }, {
-                    name: "Year 2008",
-                    data: [973, 914, 4054, 732, 34]
-                }]
-            }
+            series: [{
+                name: "Year 1800",
+                data: [107, 31, 635, 203, 2]
+            }, {
+                name: "Year 1900",
+                data: [133, 156, 947, 408, 6]
+            }, {
+                name: "Year 2008",
+                data: [973, 914, 4054, 732, 34]
+            }]
         };
 
         var options = {
@@ -64,7 +62,6 @@
                 valueSuffix: " people"
             },
             series: {
-                animate: true,
                 labels: {
                     visible : true
                 }
