--- a/src/examples/column-negative-stack.html
+++ b/src/examples/column-negative-stack.html
@@ -13,76 +13,73 @@
     <div id="chart" />
     <script>
         var data = {
-            "categories": {
-                "format": "%s",
-                "data": ["0-4", "5-9", "10-14", "15-19",
+            categories: {
+                format: "%s",
+                data: ["0-4", "5-9", "10-14", "15-19",
                     "20-24", "25-29", "30-34", "35-39", "40-44",
                     "45-49", "50-54", "55-59", "60-64", "65-69",
                     "70-74", "75-79", "80-84", "85-89", "90-94",
                     "95-99", "100 +"]
             },
-            "series": {
-                "animate": true,
-                "items": [{
-                    "name": "Male",
-                    "data": [-1746181, -1884428, -2089758, -2222362, -2537431, -2507081, -2443179,
-                        -2664537, -3556505, -3680231, -3143062, -2721122, -2229181, -2227768,
-                        -2176300, -1329968, -836804, -354784, -90569, -28367, -3878],
-                    "format": ","
-                }, {
-                    "name": "Female",
-                    "data": [1656154, 1787564, 1981671, 2108575, 2403438, 2366003, 2301402, 2519874,
-                        3360596, 3493473, 3050775, 2759560, 2304444, 2426504, 2568938, 1785638,
-                        1447162, 1005011, 330870, 130632, 21208],
-                    "format": ","
-                }]
-            }
+            series: [{
+                name: "Male",
+                data: [-1746181, -1884428, -2089758, -2222362, -2537431, -2507081, -2443179,
+                    -2664537, -3556505, -3680231, -3143062, -2721122, -2229181, -2227768,
+                    -2176300, -1329968, -836804, -354784, -90569, -28367, -3878],
+                format: ","
+            }, {
+                name: "Female",
+                data: [1656154, 1787564, 1981671, 2108575, 2403438, 2366003, 2301402, 2519874,
+                    3360596, 3493473, 3050775, 2759560, 2304444, 2426504, 2568938, 1785638,
+                    1447162, 1005011, 330870, 130632, 21208],
+                format: ","
+            }]
         };
 
         var options = {
-            "plotArea": {
-                "padding": 20
+            plotArea: {
+                padding: 20
             },
-            "legend": {
-                "title": "Category",
-                "position": "right",
-                "width": 200
+            legend: {
+                title: "Category",
+                position: "right",
+                width: 200
             },
-            "title": {
-                "text": "Column Chart - Negative Stack",
-                "align": "center",
-                "height": 50
+            title: {
+                text: "Column Chart - Negative Stack",
+                align: "center",
+                height: 50
             },
-            "xAxis": [{
-                "gridlines": "none",
-                "orient": "top",
-                "tickmarks": true,
-                "title": {
-                    "text": "Age Men"
+            xAxis: [{
+                gridlines: "none",
+                orient: "top",
+                tickmarks: true,
+                title: {
+                    text: "Age Men"
                 }
             }, {
-                "gridlines": "none",
-                "orient": "bottom",
-                "tickmark": true,
-                "title": {
-                    "text": "Age Women"
+                gridlines: "none",
+                orient: "bottom",
+                tickmark: true,
+                title: {
+                    text: "Age Women"
                 }
 
             }],
-            "yAxis": [{
-                "gridlines": "major",
-                "orient": "left",
-                "labels": {
-                    "rotate": 0
+            yAxis: [{
+                gridlines: "major",
+                orient: "left",
+                labels: {
+                    rotate: 0
                 },
-                "tickmarks": false,
-                "title": {
-                    "text": "Population"
+                tickmarks: false,
+                title: {
+                    text: "Population"
                 }
             }],
-            "tooltip": {
-                "title": "",
-                "valueSuffix": ""
+            tooltip: {
+                title: "",
+                valueSuffix: ""
             }
         };
 
