--- a/src/examples/combo.html
+++ b/src/examples/combo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Area Chart - Dual Axis</title>
+    <title>Combo Chart</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
@@ -12,17 +12,23 @@
 <body>
     <div id="chart" />
     <script>
-
         var data = {
             categories: {
                 format: "%s",
                 data: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
             },
             series: [{
-                name: "Rainfall",
+                name: "Rainfall US",
                 axis: "Rainfall",
                 data: [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4],
+                type: "column",
                 suffix: " mm"
+            }, {
+                name: "Rainfall Europe",
+                axis: "Rainfall",
+                data: [129.94, 31.53, 16.40, 149.21, 174.05, 189.07, 235.68, 48.58, 16.49, 94.11, 55.64, 44.43],
+                suffix: " mm",
+                type: "column"
             }, {
                 name: "Temperature",
                 axis: "Temperature",
@@ -34,14 +40,9 @@
 
         var options = {
             plotArea: {
-                area: {
-                    visible: true
-                },
-                line: {
-                    interpolation: "linear"
-                },
                 markers: {
                     visible: true,
+                    size: 6,
                     type: "circle"
                 },
                 padding: 20
@@ -52,10 +53,21 @@
                 width: 200
             },
             title: {
-                text: "Area Chart - Dual Axes",
+                text: "Combo Chart",
                 align: "center",
                 height: 50,
                 margin: 15
+            },
+            xAxis: {
+                gridlines: "none",
+                orient: "bottom",
+                labels: {
+                    rotate: 0
+                },
+                tickmarks: true,
+                title: {
+                    text: "Month"
+                }
             },
             yAxis: [{
                 name: "Rainfall",
@@ -74,20 +86,12 @@
                     text: "°C"
                 }
             }],
-            xAxis: {
-                gridlines: "none",
-                orient: "left",
-                tickmarks: true,
-                title: {
-                    text: "Month"
-                }
-            },
             tooltip: {
                 title: "Rainfall vs Temperature"
             }
         };
 
-		var chart = new frnk.UI.Charts.LineChart("#chart", data, options);
+		var chart = new frnk.UI.Charts.ComboChart("#chart", data, options);
 		chart.draw();
     </script>
 </body>
