--- a/src/examples/donut-multiple-series.html
+++ b/src/examples/donut-multiple-series.html
@@ -13,54 +13,48 @@
     <div id="chart" />
     <script>
         var data = {
-            "categories": {
-                "format": "%s",
-                "data": ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
+            categories: {
+                format: "%s",
+                data: ["1750", "1800", "1850", "1900", "1950", "1999", "2050"]
             },
-            "series": {
-                "items": [{
-                    "name": "Asia",
-                    "data": [52, 635, 809, 947, 1402, 3634, 5268]
-                },
-                    {
-                        "name": "Africa",
-                        "data": [20, 107, 111, 133, 221, 767, 1766]
-                    },
-                    {
-                        "name": "Europe",
-                        "data": [30, 203, 276, 408, 547, 729, 628]
-                    },
-                    {
-                        "name": "America",
-                        "data": [40, 31, 54, 156, 339, 818, 1201]
-                    },
-                    {
-                        "name": "Oceania",
-                        "data": [50, 20, 20, 60, 130, 300, 460]
-                    }]
-            }
+            series: [{
+                name: "Asia",
+                data: [52, 635, 809, 947, 1402, 3634, 5268]
+            }, {
+                name: "Africa",
+                data: [20, 107, 111, 133, 221, 767, 1766]
+            }, {
+                name: "Europe",
+                data: [30, 203, 276, 408, 547, 729, 628]
+            }, {
+                name: "America",
+                data: [40, 31, 54, 156, 339, 818, 1201]
+            }, {
+                name: "Oceania",
+                data: [50, 20, 20, 60, 130, 300, 460]
+            }]
         };
 
         var options = {
-            "plotArea": {
-                "padding": 20
+            plotArea: {
+                padding: 20,
+                pie: {
+                    innerRadius: 0.6
+                }
             },
-            "piechart": {
-                "innerRadius": 0.6
+            legend: {
+                title: "Year",
+                position: "right",
+                width: 200
             },
-            "legend": {
-                "title": "Year",
-                "position": "right",
-                "width": 200
+            title: {
+                text: "Pie Chart - Multiple Series",
+                align: "center",
+                height: 50
             },
-            "title": {
-                "text": "Pie Chart - Multiple Series",
-                "align": "center",
-                "height": 50
-            },
-            "tooltip": {
-                "title": "Population in Region",
-                "valueSuffix": " millions"
+            tooltip: {
+                title: "Population in Region",
+                valueSuffix: " millions"
             }
         };
 
