--- a/src/examples/line-basic.html
+++ b/src/examples/line-basic.html
@@ -13,73 +13,70 @@
     <div id="chart" />
     <script>
         var data = {
-            "categories": {
-                "format": "%s",
-                "data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
+            categories: {
+                format: "%s",
+                data: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
             },
-            "series": {
-                "animate": true,
-                "items": [{
-                    "name": "Tokyo",
-                    "data": [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
-                    "marker": "circle"
-                }, {
-                    "name": "New York",
-                    "data": [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5],
-                    "marker": "square"
-                }, {
-                    "name": "Berlin",
-                    "data": [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0],
-                    "marker": "triangle-up"
-                }, {
-                    "name": "London",
-                    "data": [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8],
-                    "marker": "cross"
-                }]
-            }
+            series: [{
+                name: "Tokyo",
+                data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
+                marker: "circle"
+            }, {
+                name: "New York",
+                data: [-0.2, 0.8, 5.7, 11.3, 17.0, 22.0, 24.8, 24.1, 20.1, 14.1, 8.6, 2.5],
+                marker: "square"
+            }, {
+                name: "Berlin",
+                data: [-0.9, 0.6, 3.5, 8.4, 13.5, 17.0, 18.6, 17.9, 14.3, 9.0, 3.9, 1.0],
+                marker: "triangle-up"
+            }, {
+                name: "London",
+                data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8],
+                marker: "cross"
+            }]
         };
 
         var options = {
-            "plotArea": {
-                "padding": 20
-            },
-            "linechart": {
-                "interpolation": "linear",
-                "markers": {
-                    "visible": true
-                }
-            },
-            "legend": {
-                "title": "City",
-                "position": "right",
-                "width": 200
-            },
-            "title": {
-                "text": "Line Chart - Basic",
-                "align": "center",
-                "height": 50
-            },
-            "xAxis": [{
-                "gridlines": "none",
-                "labels": {
-                    "rotate": 0
+            plotArea: {
+                line: {
+                    interpolation: "linear"
                 },
-                "tickmarks": false,
-                "title": {
-                    "text": "Month"
+                markers: {
+                    visible: true
+                },
+                padding: 20
+            },
+            legend: {
+                title: "City",
+                position: "right",
+                width: 200
+            },
+            title: {
+                text: "Line Chart - Basic",
+                align: "center",
+                height: 50
+            },
+            xAxis: [{
+                gridlines: "none",
+                labels: {
+                    rotate: 0
+                },
+                tickmarks: false,
+                title: {
+                    text: "Month"
                 }
             }],
-            "yAxis": [{
-                "gridlines": "none",
-                "orient": "left",
-                "tickmarks": true,
-                "title": {
-                    "text": "Temperature"
+            yAxis: [{
+                gridlines: "none",
+                orient: "left",
+                tickmarks: true,
+                title: {
+                    text: "Temperature"
                 }
             }],
-            "tooltip": {
-                "title": "Temperature",
-                "valueSuffix": " °C"
+            tooltip: {
+                title: "Temperature",
+                valueSuffix: " °C"
             }
         };
 
