--- a/src/examples/line-labels.html
+++ b/src/examples/line-labels.html
@@ -13,67 +13,65 @@
     <div id="chart" />
     <script>
         var data = {
-            "categories": {
-                "format": "%s",
-                "data": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
+            categories: {
+                format: "%s",
+                data: ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"]
             },
-            "series": {
-                "items": [{
-                    "name": "Tokyo",
-                    "data": [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
-                }, {
-                    "name": "London",
-                    "data": [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
-                }]
-            }
+            series: [{
+                name: "Tokyo",
+                data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+            }, {
+                name: "London",
+                data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
+            }]
         };
 
         var options = {
-            "plotArea": {
-                "padding": 20
-            },
-            "linechart": {
-                "interpolation": "linear",
-                "markers": {
-                    "visible": true
-                }
-            },
-            "legend": {
-                "title": "City",
-                "position": "right",
-                "width": 200
-            },
-            "title": {
-                "text": "Line Chart - Labels",
-                "align": "center",
-                "height": 50
-            },
-            "xAxis": [{
-                "gridlines": "none",
-                "labels": {
-                    "rotate": 0
+            plotArea: {
+                line: {
+                    interpolation: "linear"
                 },
-                "tickmarks": false,
-                "title": {
-                    "text": "Month"
+                markers: {
+                    visible: true
+                },
+                padding: 20
+            },
+            legend: {
+                title: "City",
+                position: "right",
+                width: 200
+            },
+            title: {
+                text: "Line Chart - Labels",
+                align: "center",
+                height: 50
+            },
+            xAxis: [{
+                gridlines: "none",
+                labels: {
+                    rotate: 0
+                },
+                tickmarks: false,
+                title: {
+                    text: "Month"
                 }
             }],
-            "yAxis": [{
-                "gridlines": "major",
-                "orient": "left",
-                "tickmarks": true,
-                "title": {
-                    "text": "Temperature"
+            yAxis: [{
+                gridlines: "major",
+                orient: "left",
+                tickmarks: true,
+                title: {
+                    text: "Temperature"
                 }
             }],
-            "series": {
-                "labels": {
-                    "visible": true
+            series: {
+                labels: {
+                    visible: true
                 }
             },
-            "tooltip": {
-                "title": "Temperature",
-                "valueSuffix": " °C"
+            tooltip: {
+                title: "Temperature",
+                valueSuffix: " °C"
             }
         };
 
