--- a/src/examples/scatterplot.html
+++ b/src/examples/scatterplot.html
@@ -79,7 +79,7 @@
                 }
             },
             tooltip: {
-                title: "",
+                title: "Scatter",
                 valueSuffix: ""
             }
         };
