--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         var options = {
             plotArea: {
                 animation: {
-                    duration: 1000,
+                    duration: 500,
                     ease: "linear"
                 },
                 area: {
@@ -57,7 +57,7 @@
                     outerPadding: 0
                 },
                 line: {
-                    interpolation: "linear"
+                    interpolation: "cardinal"
                 },
                 markers: {
                     visible: true,
