--- a/src/examples/column-range.html
+++ b/src/examples/column-range.html
@@ -50,12 +50,12 @@
                 tickmarks: true,
                 ticks: 4,
                 title: {
-                    text: "Rainfall (mm)"
+                        text: "Temperature"
                 }
             }],
             tooltip: {
-                title: "Rainfall",
-                valueSuffix: " mm"
+                title: "Temperature",
+                valueSuffix: " °C"
             }
         };
 
